<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_main_title">My Nanodegree Apps!</string>
    <string name="spotify_btn_text">Spotify Streamer</string>
    <string name="scores_btn_text">Scores App</string>
    <string name="library_app_btn_text">Library App</string>
    <string name="build_it_bigger_btn_text">Build it Bigger</string>
    <string name="xyz_reader_btn_text">XYZ Reader</string>
    <string name="capstone_btn_text">Capstone: My own project</string>
    <string name="main_activity_toast_start">"This button will launch my "</string>
    <string name="main_activity_toast_end">app!</string>
    <string name="spotify_toast">"spotify streamer "</string>
    <string name="scores_toast">"scores "</string>
    <string name="library_toast">"library "</string>
    <string name="build_it_bigger_toast">"build it bigger "</string>
    <string name="xyz_reader_toast">"xyz reader "</string>
    <string name="capstone_toast">"capstone "</string>
    <string name="btn_doesnt_exist_toast">button doesn\'t exist</string>
</resources>